# Xi-cam

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  DataResourcePlugin.py  FileFormatPlugin.py  FittableModelPlugin.py  GUIPlugin.py  IGUIPlugin.py  IProcessingPlugin.py  IVisualizationPlugin.py  LICENSE  LICENSE.md  MANIFEST.in  ProcessingPlugin.py  README.md  README.rst  SettingsPlugin.py  WidgetPlugin.py  Xi-cam.spec  __init__.py  appveyor.yml  build.sh  build_installers.py  cammart.py  example_mongodb_catalog.yml  gdb.sh  installer.nsi  marketplace.py  msg.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_xicam.py  (+6 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  pylint.yml
bluesky_browser/: _version.py  baseline.py  demo.py  example_config.py  figures.py  header_tree.py  hints.py  main.py  search.py  summary.py  utils.py  viewer.py  zmq.py
bluesky_browser/artists/mpl/: grid.py  image.py  line.py
bluesky_browser/frameworks/qt/: figures.py  main.py  search.py  summary.py  viewer.py
bluesky_browser/heuristics/: image.py  line.py
bluesky_browser/viewer/: baseline.py  figures.py  header_tree.py  image.py  image_viewer.py  viewer.py
cammart/: __init__.py
ci/scripts/: install.sh  release.sh  setupenv.sh
data/: __init__.py
docs/_static/: my-styles.css
docs/source/: FittableModelPlugin.md  api.md  conf.py  entry-points.md  ez-plugin.md  ezPlugin.md  faq.txt  gui-plugin.md  index.rst  ingestors.md  install-linux.md  install-macos.md  install-windows.md  install.md  installation.rst  intents.md  intro.md  operation-plugin.md  plugin-dev.md  pluginDev.md  processingPlugin.md  quickstart.md  resources.md  usage.rst  workflow.md
docs/source/_static/: 349497da-ead2-4015-8201-4719f8a2de69.msgpack  catalog.yml  my-styles.css
docs/source/hackathons/: index.rst
execution/: __init__.py  workflow.py
msg/: __init__.py
safeimport/: __init__.py
settings/: appearance.py  venvs.py
static/: __init__.py
tests/: __init__.py  test_application.py  test_hello.py
threading/: __init__.py
widgets/: searchlineedit.py
windows/: mainwindow.py  settings.py  splash.py
xicam/: _version.py  run_xicam.py
xicam/args/: __init__.py  _version.py
xicam/core/: __init__.py  _version.py  paths.py
xicam/core/args/: __init__.py
xicam/core/data/: LocalFileSystemResource.py  LocalFileSystemResource.yapsy-plugin  __init__.py  bluesky_utils.py
xicam/core/execution/: __init__.py  camlinkexecutor.py  daskexecutor.py  localexecutor.py  workflow.py
xicam/core/formats/: NPYPlugin.py  NPYPlugin.yapsy-plugin  __init__.py
xicam/core/ingestors/: generic.py
xicam/core/intents/: __init__.py
xicam/core/msg/: __init__.py
xicam/core/operations/: __init__.py
xicam/core/patches/: __init__.py  pyFAI.py
xicam/core/tests/: __init__.py  conftest.py  fixtures.py  test_data.py  test_ingestors.py  test_msg.py  test_pyFAI.py  test_threads.py  test_workflow.py  test_workflow_.py  workflow_fixtures.py
xicam/core/threads/: __init__.py
xicam/core/workspace/: __init__.py
xicam/gui/: __init__.py  _version.py
xicam/gui/actions/: __init__.py
xicam/gui/bluesky/: central.py  databroker_catalog_plugin.py  search.py  summary.py  top_utils.py  utils.py
xicam/gui/cammart/: __init__.py  cammart.yapsy-plugin  packagemanager.py  venvs.py
xicam/gui/canvases/: __init__.py
xicam/gui/canvasmanager/: __init__.py
xicam/gui/clientonlymodels/: LocalFileSystemResource.py
xicam/gui/connections/: __init__.py  connections.yapsy-plugin
xicam/gui/delegates/: lineedit.py
xicam/gui/intents/: __init__.py
xicam/gui/models/: __init__.py  treemodel.py
xicam/gui/patches/: PyQtGraph.py  __init__.py
xicam/gui/plugins/: ensembleguiplugin.py
xicam/gui/scratch/: __init__.py
xicam/gui/settings/: appearance.py  appearance.yapsy-plugin  appearance.yapsy-plugin.disabled  databroker.py  execution.py  execution.yapsy-plugin  execution.yapsy-plugin.disabled  logging.py  venvs.py  venvs.yapsy-plugin
xicam/gui/static/: __init__.py
xicam/gui/tests/: test_catalog.py  test_catalog.yapsy-plugin.disabled  test_daskflow.py  test_ensemble_tree.py  test_guiplugin.py  test_guiplugin.yapsy-plugin.disabled  test_imageviewmixins.py  test_library.py  test_linear_workflow.py  test_metadataview.py  test_ndimageview.py  test_plotwidgetmixins.py  test_rois.py  test_stackedWidget.py  test_threads.py  test_views.py  util_fixtures.py
xicam/gui/threads/: __init__.py
xicam/gui/utils/: __init__.py
xicam/gui/views/: tabview.py  treeview.py
xicam/gui/widgets/: ROI.py  __init__.py  collapsiblewidget.py  daskflow.py  dataresourcebrowser.py  debugmenubar.py  dynimageview.py  elidedlabel.py  imageviewmixins.py  (+13 more)
xicam/plugins/: ControllerPlugin.py  DataHandlerPlugin.py  DataResourcePlugin.py  EZPlugin.py  FileFormatPlugin.py  FittableModelPlugin.py  GUIPlugin.py  IDataResourcePlugin.py  IDataSourcePlugin.py  ProcessingPlugin.py  SettingsPlugin.py  WidgetPlugin.py  Workflow.py  __init__.py  _version.py  cammart.py  catalogplugin.py  controllerplugin.py  controllerpugin.py  datahandlerplugin.py  dataresourceplugin.py  ezplugin.py  fittablemodelplugin.py  guiplugin.py  hint.py  hints.py  imagemixinplugin.py  ingestorplugin.py  intentcanvasplugin.py  intentplugin.py  operationplugin.py  plotmixinplugin.py  plugin.py  processingplugin.py  settingsplugin.py  snifferplugin.py  venvs.py  widgetplugin.py
(+23 files in other folders)
